Modified jvm options on java calls.